implement like (#46)
* implement like

* optimize

* implement repo

* implement controller

* implement infrastructure of like

* handle event

* init handler

* missing likecount

* last commit
